--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>LANDING PAGE</title>
 </head>
 <body>
-    <h1>LANDING PAGE</h1>
+    <h1>HackedIn</h1>
     <p>Hello World!</p>
     <a href="/auth/github">login with github</a>
 </body>
