--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/style.css">
-    <title>LANDING PAGE</title>
+    <title>HackedIn PAGE</title>
+    <style>
+        body {background-image: url("../public/css/images/homescreen.png")}
+    </style>
 </head>
 <body>
     <h1>HackedIn</h1>
