Move logout button to nav and add avatar icon

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
   <nav>
-    <!-- INSERT NAV BAR HERE -->
+    <img id="avatar-icon" src="<%=user.avatar%>">
+    <a href="/logout">logout</a>
   </nav>
   <main>
