--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
     </main>
     <footer>
-    <!-- INSERT FOOTER NAV HERE -->
+    hackedIn DEVELOPED BY <br>
+    VINCE LAQUINDANUM // CHRIS LADD
     </footer>
 </body>
 </html>
