--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,15 @@
   <title>INSERT TITLE</title>
 </head>
 <body>
-  <nav>
-    <img id="avatar-icon" src="<%=user.avatar%>">
-    <a href="/logout">logout</a>
+  <nav id="nav-header">
+    <div id="nav-logo">
+      <img id="logo" src="/images/logo.png">
+    </div>
+    <div id="nav-menu">
+      <a class="nav-link" href="/">DASHBOARD</a>
+      <a class="nav-link" href="/">TIMELINE</a>
+      <a class="nav-link" href="/">PROFILE</a>
+      <a class="nav-link" href="/logout">LOGOUT</a>
+    </div>
   </nav>
   <main>
