homepage font blue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
             font-family: 'Orbitron', sans-serif;
         }
         .homePage {
-            color: #39FF14;
+            color: #0112f8;
             display: inline-block;
             margin-top: 275px;
             margin-right: auto;
@@ -37,7 +37,7 @@
 <body>
     <div class="homePage">
         <div id=hackedIn>
-            <h2>Welcome to <h1>HackedIn!</h1></h2>
+            <h2>Welcome to <h1><img src="../images/logo.png" alt="HackedIn Logo"></h1></h2>
         </div>
         <div>
             <h2>Login or <a href="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F&source=header-home" Signup with GitHub</p>
