--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 #avatar-icon {
-    width: 44px;
+    width: 200px;
     border-radius: 50%;
 }
 #logo {
@@ -18,7 +18,7 @@
     letter-spacing: 4px;
 }
 #main-container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-around;
     height: 80vh;
@@ -33,7 +33,7 @@
 }
 #left-pane-title {
     
-    border: 1px solid white; 
+    /* border: 1px solid white;  */
     margin-right: auto;
 }
 #page-title {
@@ -68,16 +68,72 @@
     border: none;
     letter-spacing: 2px;
 }
+#post-button:hover {
+    cursor: pointer;
+}
+#profile-container {
+    border: 1px solid #ff2a6d;
+    height:100%;
+    margin-right: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: ;
+}
+#profile-title {
+    /* border: 1px solid white; */
+    padding: 12px 24px;
+    color: #05d9e8;
+    font-size: 28px;
+    letter-spacing: 1px;
+    margin-bottom: 24px;
+}
+#profile-avatar-container {
+    /* border: 1px solid white; */
+    margin: 12px auto 32px auto;
+}
+#profile-edit {
+    display: flex;
+    flex-direction: column;
+    margin-top: 36px;
+}
+#profile-edit-button {
+    background-color: transparent;
+    text-align: right;
+    color: #ff2a6d;
+    border: none;
+    letter-spacing: 2px;
+    padding-top: 4px;
+}
+#profile-edit-button:hover {
+    cursor: pointer;
+}
+.profile-cat {
+    color: #05d9e8;
+    font-size: 12px;
+    padding-left: 56px;
+    letter-spacing: 4px;
+}
+.profile-ans {
+    font-size: 16px;
+    color: #d1f7ff;
+    padding-left: 56px;
+    margin-bottom: 8px;
+}
 .nav-link {
     margin: 10px 12px;
 }
 .main-divider {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     width: 28%;
 }
 .hr {
     border: 1px solid #ff2a6d;
     width: 512px;
+}
+.hr-profile {
+    border: 1px solid #005678;
+    width: 360px;
+    margin: 5px auto;
 }
 .post-text {
     width: 500px;
