--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -22,6 +22,30 @@
                 <input id="post-button" type="submit" value="POST">
             </form>
         </div>
+        <div id="active-post-title">
+            YOUR ACTIVE POSTS
+        </div>
+        <div id="sample-post" class="post-box">
+            <div class="post-box-header">
+                <div class="post-box-title">
+                    // NEW FOOD APP IDEA
+                </div>
+                <div class="post-box-date">
+                    6-7-2021
+                </div>
+            </div>
+            <div class="post-box-content">
+                I have this idea for a dope food app! It tracks all the food spots you’ve eaten in the past and logs a personal rating! Anyone have experience in anything like this?
+            </div>
+            <div class="post-box-footer">
+                <div class="post-box-comments">
+                    25 COMMENTS
+                </div>
+                <div class="post-box-upvote">
+                    1783 UPVOTES
+                </div>
+            </div>
+        </div>
     </section>
     <section id="right" class="main-divider">
         <div id="profile-container">
