--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
       <a class="nav-link" href="/">DASHBOARD</a>
       <a class="nav-link" href="/">TIMELINE</a>
       <a class="nav-link" href="/">PROFILE</a>
-      <a class="nav-link" href="/logout">LOGOUT</a>
+      <a class="nav-link" href="/auth/logout">LOGOUT</a>
     </div>
   </nav>
   <main>
