create timeline.js in routes folder //add to routes/index.js add to views/timeline/index.js

--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -3,6 +3,10 @@
         <div id=tl-Title>
             TIMELINE
         </div>
-
+        <br>
+        <div class="hr-profile"></div>
+        <div id="Community-Posts">
+            
+        </div>
     </div>
 <%- include('../partials/footer') %>
