add new file controllers timelines.js mod timeline.js in routers add HackedIn to header.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/css/style.css' />
-  <title>INSERT TITLE</title>
+  <title>HackedIn</title>
 </head>
 <body>
   <nav id="nav-header">
@@ -14,7 +14,7 @@
     </div>
     <div id="nav-menu">
       <a class="nav-link" href="/">DASHBOARD</a>
-      <a class="nav-link" href="/">TIMELINE</a>
+      <a class="nav-link" href="../timeline/index.ejs">TIMELINE</a>
       <a class="nav-link" href="/">PROFILE</a>
       <a class="nav-link" href="/auth/logout">LOGOUT</a>
     </div>
