connect timeline to server.  404 error if link clicked

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     </main>
     <footer>
-    hackedIn DEVELOPED BY <br>
+    HackedIn DEVELOPED BY <br>
     VINCE LAQUINDANUM // CHRIS LADD
     </footer>
 </body>
