--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -15,42 +15,22 @@
     <section id="center" class="main-divider">
         <div id="enter-post-container">
             <form id="post-form" action="/dashboard" method="POST">
-                <input id="post-title" class="post-text" type="text" placeholder="TITLE" name="title">
-                <input id="post-pitch" class="post-text" type="text" placeholder="PITCH" name="content">
+                <input id="post-title" class="post-text" type="text" placeholder="TYPE TITLE HERE" name="title">
+                <input id="post-pitch" class="post-text" type="text" placeholder="TYPE POST HERE" name="content">
                 <div class="hr"></div>
                 <input id="post-button" type="submit" value="POST">
             </form>
         </div>
+<% if (post.length > 0) { %>
         <div class="active-title">
-            YOUR ACTIVE POSTS
-        </div>
-        <div id="sample-post" class="post-box">
-            <div class="post-box-header">
-                <div class="post-box-title">
-                    // NEW FOOD APP IDEA
-                </div>
-                <div class="post-box-date">
-                    6-7-2021
-                </div>
-            </div>
-            <div class="post-box-content">
-                I have this idea for a dope food app! It tracks all the food spots you’ve eaten in the past and logs a personal rating! Anyone have experience in anything like this?
-            </div>
-            <div class="post-box-footer">
-                <div class="post-box-comments">
-                    25 COMMENTS
-                </div>
-                <div class="post-box-upvote">
-                    1783 UPVOTES
-                </div>
-            </div>
+            YOUR POSTS
         </div>
     <% post.forEach(function(post) { %>
         <a href="/posts/<%=post._id%>">    
             <div class="post-box">
                 <div class="post-box-header">
                     <div class="post-box-title">
-                        // <%= post.title %>
+                         <%= post.title %>  :  <span id="title-username"><%= post.username %></span>
                     </div>
                     <div class="post-box-date">
                         <%= post.date %>
@@ -61,7 +41,8 @@
                 </div>
                 <div class="post-box-footer">
                     <div class="post-box-comments">
-                        25 COMMENTS
+                        <%=post.comments.length%>
+                         COMMENTS
                     </div>
                     <div class="post-box-upvote">
                         1783 UPVOTES
@@ -70,6 +51,11 @@
             </div>
         </a>    
     <% }) %>
+<%} else {%>
+    <div class="active-title">
+        NO POSTS YET
+    </div>
+<%};%>    
     </section>
     <section id="right" class="main-divider">
         <div id="profile-container">
@@ -142,7 +128,6 @@
                 <button id="profile-edit-button">EDIT</button>
             </div>
         </div>
-
     </section>
 </div>
 
