changed href-exclude /index.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
     </div>
     <div id="nav-menu">
       <a class="nav-link" href="/dashboard">DASHBOARD</a>
-      <a class="nav-link" href="../timeline/index.ejs">TIMELINE</a>
+      <a class="nav-link" href="../timeline">TIMELINE</a>
       <span class="nav-link" id="profile-toggle">PROFILE</span>
       <a class="nav-link" href="/auth/logout">LOGOUT</a>
     </div>
