--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,11 @@
     width: 360px;
     margin: 5px auto;
 }
+.hr-timeline {
+    border: 1px solid #005678;
+    width: 700px;
+    margin: 5px auto;
+}
 .post-text {
     width: 500px;
     height: 26px;
@@ -214,6 +219,21 @@
     margin: 12px 12px 4px 12px;
     letter-spacing: 4px;
     font-size: 12px;
+}
+#tl-Title {
+    color: white;
+}
+#timeline-Container {
+    text-align: center;
+}
+#Community-Posts-TL {
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;    
+    padding: 5px 10px 15px 20px;
+    margin: 25px auto;
 }
 a {
     text-decoration: none;
