--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 #avatar-icon {
     width: 200px;
     border-radius: 50%;
@@ -35,7 +36,17 @@
     /* border: 1px solid white;  */
     margin-right: auto;
 }
+#TL-page-layout {
+    display: flex;
+    flex-direction: column;
+}
 #page-title {
+    color: #05d9e8;
+    font-size: 56px;
+    letter-spacing: 6px;
+    writing-mode: vertical-rl;
+}
+#TL-title {
     color: #05d9e8;
     font-size: 56px;
     letter-spacing: 6px;
@@ -170,6 +181,11 @@
     width: 600px;
     margin-bottom: 12px;
 }
+.post-box2 {
+    border: 1px solid #005678;
+    width: 700px;
+    margin-bottom: 12px;
+}
 .post-box-header{
     color: #05d9e8;
     display: flex;
@@ -222,6 +238,7 @@
 }
 #tl-Title {
     color: white;
+    font-family: 'Orbitron', sans-serif;
 }
 #timeline-Container {
     text-align: center;
@@ -238,6 +255,10 @@
 a {
     text-decoration: none;
 }
+/*#community-posts {
+}
+*/
+
 body {
     background-color: #01012b;
     font-family: 'Quicksand', sans-serif;
