} to line 275 in css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,7 +272,7 @@
     align-items: center;    
     padding: 5px 10px 15px 20px;
     margin: 25px auto;
-
+}
 .comment-box-no-access {
     opacity: 40%;
 }
