Fixes profile edit button link

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -96,7 +96,7 @@
             <br>
             <div id="profile-edit">
                 <div class="hr" style="width: 100%; margin-top: auto;"></div>
-                <button id="profile-edit-button">EDIT</button>
+                <a href="/profiles/<%=user._id%>"><button id="profile-edit-button">EDIT PROFILE</button></a>
             </div>
         </div>
 
