--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@
 #left-pane-title {
     /* border: 1px solid white;  */
     margin-right: auto;
+    margin-bottom: auto;
 }
 #TL-page-layout {
     display: flex;
@@ -286,6 +287,7 @@
 }
 a {
     text-decoration: none;
+    color: inherit;
 }
 /*#community-posts {
 }
@@ -309,4 +311,4 @@ label {
 ::placeholder {
     color: white;
     opacity: .6; /* Firefox */
-  }
+}
