--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -16,7 +16,7 @@
         <div id="profile-title" class="right-profile">// VIEW PROFILE</div>
         <div id="enter-profile-container">
             <div>
-                <img src="<%=one.avatar%>"><br>
+                <img class="avatar-icon" src="<%=one.avatar%>"><br>
                 <label>NAME //</label><div class="post-text profile-box"><%=one.name%></div>
                 <label>USERNAME //</label><div class="post-text profile-box"><%=one.username%></div>
                 <label>EMAIL //</label><div class="post-text profile-box"><%=one.email%></div>
@@ -32,7 +32,7 @@
         <div id="profile-container">
             <div id="profile-title" class="right-profile">// USER PROFILE</div>
             <div id="profile-avatar-container" class="right-profile">
-                <img id="avatar-icon" src="<%=user.avatar%>">
+                <img class="avatar-icon" src="<%=user.avatar%>">
             </div>
             <div id="profile-name">
                 <div class="profile-ans">
