--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@
 }
 #TL-page-layout {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 #page-title {
     color: #05d9e8;
@@ -60,6 +60,10 @@
     writing-mode: vertical-rl;
     text-align: right;
     margin-left: 24px;
+}
+#right-TL {
+    position: relative; 
+    left: 250px;
 }
 #left {
     display: flex;
@@ -133,6 +137,9 @@
 #enter-post-container {
     border: 1px solid #d1f7ff;
     width: 600px;
+}
+.TL-divider {
+    width: 150;
 }
 .active-title {
     color: #d1f7ff;
