--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <div id="TL-page-layout">
-    <section id="left" class="TL-divider">
+    <section id="left-TL" class="TL-divider">
         <div id="left-pane-title">
             <div id="page-desc">
                 // the dashboard is a place where you can see <br>
@@ -12,7 +12,7 @@
             </div>
         </div>
     </section>    
-    <section>   
+    <section id="right-TL" class="TL-divider">   
         <div id="timeline-Container">
             <div id=tl-Title>
                 <h1>TIMELINE</h1>
