Fixes avatar css class

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -89,7 +89,7 @@
         <div id="profile-container">
             <div id="profile-title" class="right-profile">// USER PROFILE</div>
             <div id="profile-avatar-container" class="right-profile">
-                <img id="avatar-icon" src="<%=user.avatar%>">
+                <img class="avatar-icon" src="<%=user.avatar%>">
             </div>
             <div id="profile-name">
                 <div class="profile-ans">
