--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -3,9 +3,9 @@
     <section id="left" class="main-divider">
         <div id="left-pane-title">
             <div id="page-desc">
-                // the dashboard is a place where you can see <br>
-                // your posts and post new ideas for people to comment on.<br>
-                // It also has a snapshot of your profile.<br>
+                // this is where you can view <br>
+                // your posts and post new ideas<br>
+                // for people to comment on.<br>
             </div><br>
             <div id="page-title">
                 DASHBOARD
