--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -48,7 +48,8 @@
                          COMMENTS
                     </div>
                     <div class="post-box-upvote">
-                        1783 UPVOTES
+                        <%=post.upvotes.length%>
+                         UPVOTES
                     </div>
                 </div>
             </div>
