--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -45,9 +45,9 @@
                     DELETE COMMENT
                 </div>
                 <% } %>
-                <div class="post-box-upvote">
-                    1783 UPVOTES
-                </div>
+                <form method="POST" action="/posts/upvote/<%=currentPost._id%>">
+                    <button class="post-box-delete" type="submit"><%=currentPost.upvotes.length%> UPVOTES</button>
+                </form>
             </div>
         </div>
         <div class="active-title">
