--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -7,14 +7,14 @@
                 // users can comment and upvote here<br>
             </div><br>
             <div id="TL-title">
-                COMUNNITY HUB
+                NETWORK
             </div>
         </div>
     </section>    
     <section id="right-TL" class="TL-divider">   
         <div id="timeline-Container">
             <div id=tl-Title>
-                <h1>COMUNNITY HUB</h1>
+                <h1>NETWORK</h1>
             </div>
             <br>
             <div class="hr-timeline"></div>
