removed c from upvote

--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="post-box-upvote">
                                     <%=post.upvotes.length%>
-                                    UPVOTESc
+                                    UPVOTES
                                 </div>
                             </div>
                         </div>
