--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/css/style.css' />
+  <link rel="icon" type="image/png" href="/images/favicon15.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/images/favicon32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/images/favicon96.png" sizes="96x96">
   <title>HackedIn</title>
   <script type="text/javascript" src="/js/script.js" defer></script>
 </head>
