--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HackedIn PAGE</title>
+    <link rel="icon" type="image/png" href="/images/favicon15.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/images/favicon32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon96.png" sizes="96x96">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
